2009-05-17  Darin Adler  <darin@apple.com>

        Reviewed by Simon Fraser.

        <rdar://problem/6870241> REGRESSION: Programmatically selected popup menu item not shown

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::setSelectedIndex): Added a call to updateFromElement and
        also a type check on the selected index to avoid a bad cast to HTMLOptionElement.

        * manual-tests/select-option-in-onload.html: Added.

2009-05-17  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Anders Carlsson

        Rename local variables for readability.
        
        * rendering/RenderBoxModelObject.cpp:
        (WebCore::RenderBoxModelObject::paintBorder):

2009-05-17  Darin Adler  <darin@apple.com>

        Reviewed by Mark Rowe.

        Bug 25840: fix some warnings seen on the GTK bot
        https://bugs.webkit.org/show_bug.cgi?id=25840

        * platform/ScrollView.cpp:
        (WebCore::ScrollView::platformScrollbarModes): Initialize results here.
        This is really just to quiet warnings. I think this code is unreachable.
        Someone could put ASSERT_NOT_REACHED() in here too at some point.

        * plugins/PluginStream.cpp:
        (WebCore::PluginStream::startStream): Use proper printf format for int
        here, %d, not %lu. This could cause a real problem when compiled 64-bit,
        so it's good to fix.

        * rendering/RenderTextControl.cpp:
        (WebCore::getNextSoftBreak): Initialize breakOffset to 0 here. This is
        really just to quiet the warning, but still seems like a good idea.

2009-05-17  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        Bug 25769: Fix accessibility warnings on GTK
        https://bugs.webkit.org/show_bug.cgi?id=25769

        * page/AccessibilityTable.cpp:
        (WebCore::AccessibilityTable::columnCount): Get rid of excess const.
        (WebCore::AccessibilityTable::rowCount): Ditto.