@@ -1,0 +1,26 @@
+<head>
+<style media="screen">
+.outer_slide {
+    overflow: hidden;
+    height: 0;
+    -webkit-transition: height 100s ease-in-out;
+}
+</style>
+</head>
+  <body>
+<div>To run this test, Print and then push the Preview button (on Mac OS X). The symptom of the bug is a layout with overlapping text or missing sections.
+If the test passes you should be able to see eight different lines below A, A1, A2, A3, B, B1, C, and C1. If it fails you might see as few as four lines.</div>
+<div><br></div>
+<div>A: When printing you should be able to see all three paragraphs below.</div>
+<div class='outer_slide'>
+    <div>A1: This is a long paragraph which helps us see the mess you can get with long ones.<br>
+        A2: This is a long paragraph which helps us see the mess you can get with long ones.<br>
+        A3: This is a long paragraph which helps us see the mess you can get with long ones.<br>
+</div></div>
+<div>B: When printing you should be able to see one line below.</div>
+<div class='outer_slide'><div>B1: This is a long paragraph which helps us see the mess you can get with long ones.</div></div>
+<div>C: When printing you should be able to see one line below</div>
+<div class='outer_slide'><div>C1: This is a long paragraph which helps us see the mess you can get with long ones.</div></div>
+</div>
+</body>
+</html>
